Table master_customer {
  customer_id varchar [pk]
  customer_name varchar
  customer_type varchar
  region varchar
  alamat varchar
  payment_terms varchar
  customer_status varchar
}

Table master_sku {
  sku_id int [pk]
  sku_name varchar
  kategori varchar
  satuan varchar
  price_min float
  price_max float
  sku_status varchar
}

Table master_sales_rep {
  sales_rep_id varchar [pk]
  sales_name varchar
  region varchar
  status varchar
}

Table so_data {
  so_id varchar [pk]
  so_date date
  customer_id varchar
  sales_rep_id varchar
  so_total_value float
  invoice_count int
  so_status varchar
}

Table so_detail {
    so_id varchar [pk]
    no_urut int
    sku_id int
    nama_produk varchar
    qty_order int
    unit_price float
    subtotal float    
}

Table invoice_data {
    invoice_id int [pk]
    so_id varchar
    customer_id varchar
    invoice_date date
    is_partial boolean
    partial_ke int
    invoice_value float
    payment_status varchar
    status_invoice varchar
    bundle_complete_date date
    has_return boolean
    ref_so_date date
}

Table invoice_detail {
    invoice_id int
    so_id varchar
    no_urut int
    nama_produk varchar
    qty_delivered int
    unit_price float
    total float    
}

Table dn_data {
    dn_id int [pk]
    invoice_id int
    customer_id varchar
    delivery_date date
    delivery_method varchar
    dn_return_date date
    status_dn varchar    
}

Table return_data {
    retur_id int [pk]
    invoice_id int
    so_id varchar
    sku_id int
    nama_produk varchar
    qty_returned int
    return_reason varchar
    return_date date
    status_return varchar
    value_return float
    
}

Ref: so_data.customer_id > master_customer.customer_id
Ref: so_data.sales_rep_id > master_sales_rep.sales_rep_id
Ref: so_detail.so_id > so_data.so_id
Ref: so_detail.sku_id > master_sku.sku_id
Ref: invoice_data.so_id > so_data.so_id
Ref: invoice_data.customer_id > master_customer.customer_id
Ref: invoice_detail.invoice_id > invoice_data.invoice_id
Ref: invoice_detail.so_id > so_data.so_id
Ref: dn_data.invoice_id > invoice_data.invoice_id
Ref: dn_data.customer_id > master_customer.customer_id
Ref: return_data.invoice_id > invoice_data.invoice_id
Ref: return_data.so_id > so_data.so_id
Ref: return_data.sku_id > master_sku.sku_id